# WebApp_Food

./: .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  app.py  environment_dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: PP_recipes_data.csv  PP_user_desserts.csv  PP_user_main_dishes.csv  PP_user_main_dishs.csv
docs/: conf.py  graph.rst  index.rst  modules.rst  preprocessing.rst  webapp_food.rst
docs/_build/doctrees/: algo_recipe_suggestion.doctree  environment.pickle  graph.doctree  index.doctree  modules.doctree  preprocessing.doctree  webapp_food.doctree
docs/_build/html/: .buildinfo.bak  algo_recipe_suggestion.html  genindex.html  graph.html  index.html  modules.html  objects.inv  preprocessing.html  py-modindex.html  search.html  searchindex.js  webapp_food.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/webapp_food/: user_fooder.html  utils.html
docs/_build/html/_sources/: algo_recipe_suggestion.rst.txt  index.rst.txt
preprocessing/: preprocessing.ipynb
tests/: notebook.ipynb  script.py  test_fooder_UI.py  test_user_fooder.py  test_utils.py
webapp_food/: Recipes_suggestion.py  app.py  fooder.py  settings.py  user_fooder.py  utils.py
webapp_food/graphs/: neighbour.html
