[tool.poetry]
name = "webapp-food"
version = "0.1.0"
description = ""
authors = ["Louis Borreill", "Luca Hachani", "Merlin Poitou"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
streamlit = "^1.39.0"
streamlit-extras = "^0.5.0"
flake8 = "^7.1.1"
sphinx = "^8.1.3"
furo = "^2024.8.6"
pyvis = "^0.3.2"
networkx = "^3.4.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.3.3"
pytest-mock = "^3.14"
coverage = "^7.6.9"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
